# fintax-hackyeah-2024

./: .gitignore  README.md  container-compose.yml  docker-compose.yml
deep-presentation-api/: .env.local  .python-version  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt
deep-presentation-api/src/: dock  frame_processing.py  main.py  process_audio.py  process_vision.py  processing.py
deep-presentation-api/src/audio/: calculate_video_noise.py  find_similiar_sentences_transcription.py  get_histogram.py  indexes.py  indexes_alt.py  speach_pauses.py  srt_gen.py  words_speed.py
deep-presentation-api/src/text/: ai_textual_report.py  named_entity_recognition.py
deep-presentation-api/src/utils/: common.py  openai.py
deep-presentation-api/test_data/0000-4444-0000-4444/: 0000-4444-0000-4444.srt  transcription.json
deep-presentation-client/: .env.local  .gitignore  .python-version  Dockerfile  Home.py  pyproject.toml  requirements.txt
deep-presentation-client/pages/: 1_Upload.py  2_Analysis_Review.py  3_About.py
deep-presentation-client/utils/: api.py  common.py  video.py
whisperx-fin/: Dockerfile  main.py  pyproject.toml  requirements.txt
