[tool.poetry]
name = "deeppresentation-api"
version = "0.1.0"
description = ""
authors = ["Jakub Melzacki <melzacki.jakub@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
