[tool.poetry]
name = "deeppresentation-api"
version = "0.1.0"
description = ""
authors = ["Jakub Melzacki <melzacki.jakub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
python-multipart = "^0.0.11"
librosa = "^0.10.2.post1"
pillow = "^10.4.0"
deepface = "^0.0.93"
tf-keras = "^2.17.0"
openai = "^1.50.2"
sentence-transformers = "^3.1.1"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
