[tool.poetry]
name = "whisperx-fin"
version = "0.1.0"
description = ""
authors = ["Tafeen <taafeenn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
python-multipart = "^0.0.11"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
